# otus_homework_3

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Doxyfile  Doxyfile.in  Makefile  annotated.html  classes.html  cmake_install.cmake  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  print_ip-0.0.16-Linux.deb  structis__vector__or__list-members.html  structis__vector__or__list.html  structis__vector__or__list_3_01std_1_1list_3_01U_01_4_01_4-members.html  structis__vector__or__list_3_01std_1_1list_3_01U_01_4_01_4.html  structis__vector__or__list_3_01std_1_1vector_3_01U_01_4_01_4-members.html  structis__vector__or__list_3_01std_1_1vector_3_01U_01_4_01_4.html  test_Version  version.h
.github/workflows/: release.yml
@CMAKE_CURRENT_BINARY_DIR@/docs/: graph_legend.html  index.html
Testing/Temporary/: CTestCostData.txt
_CPack_Packages/Linux/DEB/: print_ip-0.0.4-Linux.deb
_CPack_Packages/Linux/DEB/print_ip-0.0.16-Linux/: control
_CPack_Packages/Linux/DEB/print_ip-0.0.4-Linux/: control  md5sums
docs/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  structis__vector__or__list-members.html  structis__vector__or__list.html  structis__vector__or__list_3_01std_1_1list_3_01U_01_4_01_4-members.html  structis__vector__or__list_3_01std_1_1list_3_01U_01_4_01_4.html  structis__vector__or__list_3_01std_1_1vector_3_01U_01_4_01_4-members.html  structis__vector__or__list_3_01std_1_1vector_3_01U_01_4_01_4.html
docs/search/: functions_1.js  searchdata.js  variables_0.js
search/: all_0.js  all_2.js  all_3.js  classes_0.js
src/: main.cpp
